--- a/buildout.cfg
+++ b/buildout.cfg
@@ -63,7 +63,7 @@ products =
     ${plone:products}
 zope-conf-additional =
     <zodb_db energycuba>
-        mount-point /energycuba
+        mount-point /energy-cuba
         cache-size 750
         <zeoclient>
             server ${instance:zeo-address}
